static/css/style.css
body {
    --main-text: #15141A;
    --secondary-text: #5B5B66;
    /* --cards-subtitle: #9098ac; */
    font-family: "Nunito Sans", sans-serif;
    min-width: 330px;
    display: flex;
    flex-direction: column;
    height: 100%;
    /* min-height: 100vh; */
    margin: 0;
    padding: 0;
}

main {
    flex: 1 0 auto;
}

.current {
    color: rgb(234, 239, 190);
    font-size: 1.2em;
}

.brand-logo > img {
    max-width: 250px;
}
#nav_menu > li > a, #nav_menu > li > a > i {
    font-size: 0.9rem;
}

#mobile_menu > li > a {
    color: white;
}

.modal {
    max-height: 100%;
    
    min-width: 250px;
}
.card-content {
    height: 100%;
    overflow: visible;
}

.card_mw {
    max-width: 280px;
}
.align-middle {
    text-align: center;
}

.secondary-content {
    color: #268d00;
    font-size: 1.5em;
}

.collection-item {
    display: flex;
    flex-direction: column;
  }

.card {
    flex-grow: 1;
}

.truncate {
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
}

footer.page-footer {
    /* margin: 0; */
    margin-top: auto;
}

.page-footer {
    margin-top: auto;
}
/* -------------------------------------------------------------------- */
/* New cards */
.container-fluid {
  width: 100%;
  min-height: calc(100vh - 130px);
  padding: 25px 18px;
}
.card .card-content .card-title {
  line-height: 24px;
  margin-bottom: 10px;
  margin-top: 0px;
}
.card .card-title {
  font-weight: 700;
  font-size: 18px;
}
.card .card-content .card-subtitle {
  margin-bottom: 15px;
  margin-top: -5px;
  font-size: 15px;
  font-weight: 300;
  color: #9098ac;
}
h1, h2, h3, h4, h5, h6 {
  color: #414755;
}

.db-icons {
  font-size: 3rem;
  margin-right: 10px;
  /* color: #9098ac; */
}
.cards-padding {
  padding: 15px;
}
.alg-el-center {
  align-items: center;
}
.mini-cards {
  /* border-radius: 10px;
  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
  padding: 15px;
  margin-bottom: 20px;
  transition: all 0.3s ease-in-out;
  background-color: #fff;
  border: 1px solid #e0e0e0; */
  text-align: center;
  width: 100%;
}
.disp-flex {
  display: flex;
}
.mini-cards-title {
  color: var(--secondary-text);

}
/* -------------------------------------------------------------------- */

.parallax-container {
    min-height: 380px;
    line-height: 0;
    height: auto;
    color: rgba(255,255,255,.9);
  }
    .parallax-container .section {
      width: 100%;
    }
  
  @media only screen and (max-width : 992px) {
    .parallax-container .section {
      position: absolute;
      top: 40%;
    }
    #index-banner .section {
      top: 10%;
    }
  }
  
  @media only screen and (max-width : 600px) {
    #index-banner .section {
      top: 0;
    }
  }

@media (max-width: 476px) {                  
    .hide_it {
        display: none;
    }
 }

